--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,18 @@
     <string name="btn_login">登录</string>
     <string name="btn_register">注册</string>
 
-    <!--取消界面-->
+    <!--注册界面-->
     <string name="btn_cancel">取消</string>
     <string name="hint_confirm_password">请确认密码</string>
+
+    <!--HomeFragment-->
+    <string name="txt_look_around">随便逛逛</string>
+    <string name="txt_goods_delivered">有货出手</string>
+    <string name="txt_wonderful_activity">精彩活动</string>
+    <string name="txt_guess_like">猜你喜欢</string>
+    <string name="txt_festival">端午节带你High</string>
+    <string name="txt_rebuy_festival">ReBuy端午节</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
