--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,8 +122,18 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--MineShopActivity-->
     <string name="txt_mine_shop">阿狸的小店</string>
     <string name="txt_mine_on_sale">在售商品5件</string>
     <string name="txt_mine_had_sale">已售商品10件</string>
     <string name="txt_mine_shop_introduction">这是店铺的介绍，，物美价廉，经济实惠，总之就是很多很多介绍</string>
+    <string name="txt_mine_onprocess">进行中...</string>
+    <string name="txt_mine_finish">已完成</string>
+
+    <!--MineOrderActivity-->
+    <string name="txt_order_agree_refund">同意退款</string>
+
+    <!--MineCollectionActivity-->
+    <string name="txt_mycollection">我的收藏</string>
 </resources>
