--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,4 +136,14 @@
 
     <!--MineCollectionActivity-->
     <string name="txt_mycollection">我的收藏</string>
+
+    <!--MineSettingActivity-->
+    <string name="txt_mine_setting">设置</string>
+    <string name="txt_picture_quality">图片质量</string>
+    <string name="txt_clear_cache">清除缓存</string>
+    <string name="txt_coming_soon">敬请期待</string>
+    <string name="txt_about_us">关于我们</string>
+    <string name="txt_problem_feedback">问题反馈</string>
+    <string name="txt_share_friends">分享给朋友</string>
+    <string name="txt_logout">退出登录</string>
 </resources>
